--- a/src/app/pages/own-dashboad/own-dashboad.component.scss
+++ b/src/app/pages/own-dashboad/own-dashboad.component.scss
@@ -58,3 +58,8 @@
     border-bottom-left-radius: 5%;
     border-bottom-right-radius: 5%;
 }
+.text-epils {
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+}
