--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -1,3 +1,4 @@
+
 <mat-tab-group dynamicHeight name="tabGroup" class="mt-3">
   <mat-tab label="รอการเบิก" name="tabWaitWithdrawal">
     <div class="row" name="rowWaitWithdrawal">
@@ -8,7 +9,8 @@
               <div class="col-12 col-xs-12 col-sm-6 col-md-6" name="colTeamDetail">
                 <h5 class="mb-0 text-overflow" name="textOrderNo">รหัสใบสั่งซื้อ: {{item.monitorno}}</h5>
                 <h5 class="mb-0 text-overflow" name="item.team.teamname">ชื่อทีม: {{item.team.teamname}}</h5>
-                <h5 class="mb-0 text-overflow" name="item.team.totalorderamount">รวมออเดอร์: {{item.totalorderamount | number}}</h5>
+                <h5 class="mb-0 text-overflow" name="item.team.totalorderamount">รวมออเดอร์:
+                  {{item.totalorderamount | number}}</h5>
               </div>
               <div *ngIf="user.roles[0]==='stockstaff'"
                 class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
@@ -35,7 +37,8 @@
             <div class="row mt-2 mb-3 scroll-x mr-2" name="rowOrderStaff">
               <div class="col-8 col-sm-6 col-md-4 col-lg-3 ml-3 mt-2 mb-2 border-order" *ngFor="let itm of item.orders"
                 name="colOrderStaff">
-                <span style="display: block" class="mt-2 text-overflow" name="itm.orderno">รหัสใบสั่งซื้อ: {{itm.orderno}}</span>
+                <span style="display: block" class="mt-2 text-overflow" name="itm.orderno">รหัสใบสั่งซื้อ:
+                  {{itm.orderno}}</span>
                 <span style="display: block" name="textName">ชื่อผู้สั่ง:
                   <span class="mr-2 " name="itm.customer.firstname">{{itm.customer.firstname}}</span>
                   <span class="text-overflow" name="itm.customer.lastname">{{itm.customer.lastname}}</span></span>
@@ -62,7 +65,8 @@
               <div class="col-12 col-xs-12 col-sm-6 col-md-6" name="colTeamDetail2">
                 <h5 class="mb-0 text-overflow" name="textOrderNo2">รหัสใบสั่งซื้อ: {{item2.monitorno}}</h5>
                 <h5 class="mb-0 text-overflow" name="item2.team.teamname">ชื่อทีม: {{item2.team.teamname}}</h5>
-                <h5 class="mb-0 text-overflow" name="item2.totalorderamount">รวมออเดอร์: {{item2.totalorderamount | number}}</h5>
+                <h5 class="mb-0 text-overflow" name="item2.totalorderamount">รวมออเดอร์:
+                  {{item2.totalorderamount | number}}</h5>
               </div>
               <div *ngIf="user.roles[0]==='packstaff'"
                 class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
@@ -80,25 +84,27 @@
             <div class="row mt-2 mb-3 scroll-x mr-2" name="rowOrderStaff2">
               <div class="col-8 col-sm-6 col-md-4 col-lg-3 ml-3 mt-2 mb-2 border-order"
                 *ngFor="let itm2 of item2.orders;let j2 = index" name="colOrderStaff2">
-                <span style="display: block" class="mt-2 text-overflow" name="itm2.orderno">รหัสใบสั่งซื้อ: {{itm2.orderno}}</span>
+                <span style="display: block" class="mt-2 text-overflow" name="itm2.orderno">รหัสใบสั่งซื้อ:
+                  {{itm2.orderno}}</span>
                 <span style="display: block" name="textName2">ชื่อผู้สั่ง:
                   <span class="mr-2" name="itm2.customer.firstname">{{itm2.customer.firstname}}</span>
                   <span class="text-overflow" name="itm2.customer.lastname">{{itm2.customer.lastname}}</span>
                 </span>
                 <span style="display: block" class="mb-2 text-overflow" name="itm2.totalamount">รวม:
                   {{itm2.totalamount | number}}</span>
-                <div class="border-top mt-2 min-label-height" *ngIf="itm2.labels.length > 0" name="divLabel" >
+                <div class="border-top mt-2 min-label-height" *ngIf="itm2.labels.length > 0" name="divLabel">
                   <span style="display: block" class="mt-2 text-overflow" name="textTrackLabel">เลขที่พัสดุ:
                     {{itm2.labels[itm2.page ? itm2.page : 0].trackno}}</span>
-                  
+
                   <span style="display: block" name="textCustomerLabel" class="text-overflow">ชื่อผู้สั่ง:
                     <span class="mr-2"> {{itm2.labels[itm2.page ? itm2.page : 0].customer.firstname}}</span>
                     <span>{{itm2.labels[itm2.page ? itm2.page : 0].customer.lastname}}</span>
                   </span>
                   <span>
-                    <span *ngFor="let prod of itm2.labels[itm2.page ? itm2.page : 0].productlist"><small><small>{{prod.name}} = {{prod.qty}}, </small></small></span>
+                    <span *ngFor="let prod of itm2.labels[itm2.page ? itm2.page : 0].productlist"><small><small>{{prod.name}}
+                          = {{prod.qty}}, </small></small></span>
                   </span>
-                  
+
                 </div>
                 <div class="col-12 border-top mt-2 pt-2 min-label-height text-center" *ngIf="itm2.labels.length < 1"
                   name="colNoLabel">
@@ -110,8 +116,8 @@
                 </mat-paginator>
                 <div *ngIf="user.roles[0]==='packstaff'" class="row" name="rowBtnLabel">
                   <div class="col-6 pl-0 pr-0" name="colBtnLabel">
-                    <button mat-stroked-button color="accent" class="full-width btn-list-style"
-                      name="btnPrint" (click)="printLabel(itm2)">พิมพ์</button>
+                    <button mat-stroked-button color="accent" class="full-width btn-list-style" name="btnPrint"
+                      (click)="printLabel(itm2)">พิมพ์</button>
                   </div>
                   <div class="col-6 pl-0 pr-0" name="colBtnLabel2">
                     <button mat-stroked-button color="accent" class="full-width btn-list-style"
@@ -138,7 +144,8 @@
               <div class="col-12 col-xs-12 col-sm-6 col-md-6" name="colTeamDetail3">
                 <h5 class="mb-0 text-overflow" name="textOrderNo3 ">รหัสใบสั่งซื้อ: {{item3.monitorno}}</h5>
                 <h5 class="mb-0 text-overflow" name="item3.team.teamname">ชื่อทีม: {{item3.team.teamname}}</h5>
-                <h5 class="mb-0 text-overflow" name="item3.team.totalorderamount">รวมออเดอร์: {{item3.totalorderamount | number}}</h5>
+                <h5 class="mb-0 text-overflow" name="item3.team.totalorderamount">รวมออเดอร์:
+                  {{item3.totalorderamount | number}}</h5>
               </div>
               <div *ngIf="user.roles[0]==='packstaff'"
                 class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
@@ -204,13 +211,15 @@
               <div class="col-12 col-xs-12 col-sm-6 col-md-6" name="colTeamDetail4">
                 <h5 class="mb-0 text-overflow" name="textOrderNo4">รหัสใบสั่งซื้อ: {{item4.monitorno}}</h5>
                 <h5 class="mb-0 text-overflow" name="item4.team.teamname">ชื่อทีม: {{item4.team.teamname}}</h5>
-                <h5 class="mb-0 text-overflow" name="item4.totalorderamount">รวมออเดอร์: {{item4.totalorderamount | number}}</h5>
+                <h5 class="mb-0 text-overflow" name="item4.totalorderamount">รวมออเดอร์:
+                  {{item4.totalorderamount | number}}</h5>
               </div>
             </div>
             <div class="row mt-2 mb-3 scroll-x mr-2" name="rowOrderStaff4">
               <div class="col-8 col-sm-6 col-md-4 col-lg-3 ml-3 mt-2 mb-2 border-order"
                 *ngFor="let itm4 of item4.orders;let j4 = index" name="colOrderStaff4">
-                <span style="display: block" class="mt-2 text-overflow" name="itm4.orderno">รหัสใบสั่งซื้อ: {{itm4.orderno}}</span>
+                <span style="display: block" class="mt-2 text-overflow" name="itm4.orderno">รหัสใบสั่งซื้อ:
+                  {{itm4.orderno}}</span>
                 <span style="display: block" name="textName4">ชื่อผู้สั่ง:
                   <span class="mr-2 " name="itm4.customer.firstname">{{itm4.customer.firstname}}</span>
                   <span class="text-overflow" name="itm4.customer.lastname">{{itm4.customer.lastname}}</span>
