--- a/src/app/pages/own-dashboad/own-dashboad.component.html
+++ b/src/app/pages/own-dashboad/own-dashboad.component.html
@@ -54,7 +54,7 @@
         <mat-card-title>รายชื่อผู้ขอร่วมทีม</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <div *ngIf="statusWaitApprove.lenght === 0">
+        <div *ngIf="statusWaitApprove.length === 0">
           <h2 class="text-epils">
             ไม่มีการสมัครสมาชิก
           </h2>
