--- a/src/app/pages/stockpack/stockpack.component.html
+++ b/src/app/pages/stockpack/stockpack.component.html
@@ -2,7 +2,7 @@
   <div class="col-12 col-xs-12 col-sm-8 col-md-6">
     <mat-form-field class="full-width">
       <span matPrefix>ค้นหา &nbsp;</span>
-      <input [(ngModel)]="keyword" matInput placeholder="เลขที่ใบสั่งซื้อ, ชื่อผู้สั่ง, เบอร์โทรศัพท์">
+      <input (click)="gotoSearch()" matInput placeholder="เลขที่ใบสั่งซื้อ, ชื่อผู้สั่ง, เบอร์โทรศัพท์">
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
