check get monitor

--- a/src/app/pages/search-monitor-all/search-monitor-all.component.html
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.html
@@ -2,14 +2,14 @@
   <div class="col-12 col-xs-12 col-sm-8 col-md-6">
     <mat-form-field class="full-width">
       <span matPrefix>ค้นหา &nbsp;</span>
-      <input [(ngModel)]="keyword" matInput placeholder="เลขที่ใบสั่งซื้อ, ชื่อผู้สั่ง, เบอร์โทรศัพท์">
+      <input [(ngModel)]="keyword"  matInput placeholder="เลขที่ใบสั่งซื้อ, ชื่อผู้สั่ง, เบอร์โทรศัพท์">
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
 </div>
 <div class="row">
-  <div class="col-12 pt-3" name="colWaitWithdrawal">
-    <div class="row mt-3" *ngFor="let item of (allMonitor | filterKeyword: keyword )">
+  <div class="col-12 pt-3" name="colWaitWithdrawal" *ngIf="allMonitor && allMonitor.length > 0">
+    <div class="row mt-3" *ngFor="let item of (allMonitor | filterKeyword: keyword)">
       <div class="col-12">
         <mat-toolbar color="accent" class="border-top">
           <mat-toolbar-row>
@@ -119,6 +119,5 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
