--- a/src/app/pages/search-monitor-all/search-monitor-all.component.html
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.html
@@ -19,23 +19,23 @@
             <span *ngIf="item.status === 'waitpack'">(รอการแพ็ค)</span>
             <span *ngIf="item.status === 'waitshipping'">(รอการจัดส่ง)</span>
             <span *ngIf="item.status === 'complete'">(เสร็จสิ้น)</span>
-            <button mat-icon-button *ngIf="item.status === 'waitwithdrawal'" (click)="print(item._id)">
+            <button mat-icon-button *ngIf="item.status === 'waitwithdrawal' && user.roles[0]==='stockstaff'" (click)="print(item._id)">
               <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitwithdrawal'" (click)="toWaitPack(item)">
+            <button mat-icon-button *ngIf="item.status === 'waitwithdrawal' && user.roles[0]==='stockstaff'" (click)="toWaitPack(item)">
               <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitpack'">
+            <button mat-icon-button *ngIf="item.status === 'waitpack' && user.roles[0]==='stockstaff'">
               <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitpack'" (click)="toWaitShipping(item)">
+            <button mat-icon-button *ngIf="item.status === 'waitpack' && user.roles[0]==='stockstaff'" (click)="toWaitShipping(item)">
               <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitshipping'" (click)="toComplete(item)">
+            <button mat-icon-button *ngIf="item.status === 'waitshipping' && user.roles[0]==='stockstaff'" (click)="toComplete(item)">
               <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
               </mat-icon>
             </button>
@@ -100,15 +100,15 @@
                 </div>
               </mat-card-content>
               <mat-card-actions class="text-right mb-0" *ngIf="item.status === 'waitpack'">
-                <button mat-icon-button color="accent">
+                <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
                   <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(itm)">
                     print
                   </mat-icon>
                 </button>
-                <button mat-icon-button color="accent">
+                <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
                   <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
                 </button>
-                <button mat-icon-button color="accent">
+                <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
                   <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
                 </button>
               </mat-card-actions>
