--- a/src/app/modal/modal-profile/modal-profile.component.scss
+++ b/src/app/modal/modal-profile/modal-profile.component.scss
@@ -12,12 +12,10 @@
 }
 
 ::ng-deep .mat-ink-bar {
-    border-radius: 6px !important;
     position: absolute !important;
     bottom: 0 !important;
-    height: 48px !important;
-    opacity: 0.3 !important;
-    transition: 0.2s cubic-bezier(.34, 0, .25, 1.3) !important;
+    height: 2px !important;
+    transition: .5s cubic-bezier(.35,0,.25,1) !important;
 }
 
 .no-data {
