--- a/src/app/pages/search-monitor-all/search-monitor-all.component.html
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.html
@@ -2,7 +2,7 @@
   <div class="col-12 col-xs-12 col-sm-8 col-md-6">
     <mat-form-field class="full-width">
       <span matPrefix>ค้นหา &nbsp;</span>
-      <input [(ngModel)]="keyword"  matInput placeholder="เลขที่ใบสั่งซื้อ, ชื่อผู้สั่ง, เบอร์โทรศัพท์">
+      <input [(ngModel)]="keyword" matInput placeholder="เลขที่ใบสั่งซื้อ, ชื่อผู้สั่ง, เบอร์โทรศัพท์">
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
@@ -19,11 +19,13 @@
             <span *ngIf="item.status === 'waitpack'">(รอการแพ็ค)</span>
             <span *ngIf="item.status === 'waitshipping'">(รอการจัดส่ง)</span>
             <span *ngIf="item.status === 'complete'">(เสร็จสิ้น)</span>
-            <button mat-icon-button *ngIf="item.status === 'waitwithdrawal' && user.roles[0]==='stockstaff'" (click)="print(item._id)">
+            <button mat-icon-button *ngIf="item.status === 'waitwithdrawal' && user.roles[0]==='stockstaff'"
+              (click)="print(item._id)">
               <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitwithdrawal' && user.roles[0]==='stockstaff'" (click)="toWaitPack(item)">
+            <button mat-icon-button *ngIf="item.status === 'waitwithdrawal' && user.roles[0]==='stockstaff'"
+              (click)="toWaitPack(item)">
               <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
               </mat-icon>
             </button>
@@ -31,11 +33,13 @@
               <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitpack' && user.roles[0]==='stockstaff'" (click)="toWaitShipping(item)">
+            <button mat-icon-button *ngIf="item.status === 'waitpack' && user.roles[0]==='stockstaff'"
+              (click)="toWaitShipping(item)">
               <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitshipping' && user.roles[0]==='stockstaff'" (click)="toComplete(item)">
+            <button mat-icon-button *ngIf="item.status === 'waitshipping' && user.roles[0]==='stockstaff'"
+              (click)="toComplete(item)">
               <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
               </mat-icon>
             </button>
@@ -112,7 +116,10 @@
                   <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
                 </button>
               </mat-card-actions>
-              <mat-card-actions class="text-right">
+              <mat-card-actions class="text-right mb-0" *ngIf="item.status === 'waitshipping'">
+                <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
+                  <mat-icon aria-label="Example icon-button with a heart icon">edit</mat-icon>
+                </button>
               </mat-card-actions>
             </mat-card>
           </div>
