--- a/src/app/pages/stockpack/stockpack.component.scss
+++ b/src/app/pages/stockpack/stockpack.component.scss
@@ -119,11 +119,9 @@
     flex: 1 1 auto;
   }
 
-// ::ng-deep .mat-ink-bar {
-//     border-radius: 6px !important;
-//     position: absolute !important;
-//     bottom: 0 !important;
-//     height: 48px !important;
-//     opacity: 0.3 !important;
-//     transition: 0.2s cubic-bezier(.34,0,.25,1.3) !important;
-// }
+::ng-deep .mat-ink-bar {
+    position: absolute !important;
+    bottom: 0 !important;
+    height: 2px !important;
+    transition: .5s cubic-bezier(.35,0,.25,1) !important;
+}
