--- a/src/app/pages/manage-member/manage-member.component.scss
+++ b/src/app/pages/manage-member/manage-member.component.scss
@@ -21,19 +21,13 @@
 .cuser-poiter{
     cursor: pointer;
 }
-// ::ng-deep .mat-tab-body-content {
-//     height: 100%;
-//     overflow-x: hidden !important;
-// }
 
-// ::ng-deep .mat-ink-bar {
-//     border-radius: 6px !important;
-//     position: absolute !important;
-//     bottom: 0 !important;
-//     height: 48px !important;
-//     opacity: 0.3 !important;
-//     transition: 0.2s cubic-bezier(.34,0,.25,1.3) !important;
-// }
+::ng-deep .mat-ink-bar {
+    position: absolute !important;
+    bottom: 0 !important;
+    height: 2px !important;
+    transition: .5s cubic-bezier(.35,0,.25,1) !important;
+}
 
 .text-wrap {
     word-wrap: break-word;
