--- a/src/app/pages/stockpack/stockpack.component.html
+++ b/src/app/pages/stockpack/stockpack.component.html
@@ -84,7 +84,7 @@
               <mat-toolbar-row>
                 <span>รหัสใบสั่งซื้อ: {{item2.monitorno}}</span>
                 <span class="example-spacer pl-5 d-none d-md-block"><small>ทีม: {{item2.team.teamname}}</small></span>
-                <button mat-icon-button *ngIf="user.roles[0]==='stockstaff'">
+                <button mat-icon-button *ngIf="user.roles[0]==='stockstaff'" (click)="printLabelAll(item2)">
                   <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
                   </mat-icon>
                 </button>
