--- a/src/app/pages/stockpack/stockpack.component.html
+++ b/src/app/pages/stockpack/stockpack.component.html
@@ -136,7 +136,7 @@
                           <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(itm2)">print
                           </mat-icon>
                         </button>
-                        <button mat-icon-button color="accent">
+                        <button mat-icon-button color="accent" (click)="addBox(itm2,item2)">
                           <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
                         </button>
                         <button mat-icon-button color="accent">
