--- a/src/app/modal/modal-add-box/modal-add-box.component.html
+++ b/src/app/modal/modal-add-box/modal-add-box.component.html
@@ -33,14 +33,13 @@
       </div>
     </div>
 
-    <div name="divOnCol" class="col-12 mt-3">
+    <!-- <div name="divOnCol" class="col-12 mt-3">
       <form name="formInput" class="example-form">
         <mat-form-field name="mat-form-field" class="example-full-width">
           <input type="tel" [(ngModel)]="trackno" name="keyTel" matInput placeholder="กรุณากรอกเลขที่พัสดุ">
         </mat-form-field>
-        
       </form>
-    </div>
+    </div> -->
   </div>
 </mat-dialog-content>
 
