--- a/src/app/pages/stockpack/stockpack.component.html
+++ b/src/app/pages/stockpack/stockpack.component.html
@@ -23,11 +23,11 @@
                 <span>รหัสใบสั่งซื้อ: {{item.monitorno}}</span>
                 <span class="example-spacer pl-5 d-none d-md-block"><small>ทีม: {{item.team.teamname}}</small></span>
                 <button mat-icon-button *ngIf="user.roles[0]==='stockstaff'" (click)="print(item._id)">
-                  <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
+                  <mat-icon aria-hidden="false" aria-label="Example heart icon">print
                   </mat-icon>
                 </button>
                 <button mat-icon-button *ngIf="user.roles[0]==='stockstaff'" (click)="toWaitPack(item)">
-                  <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
+                  <mat-icon aria-hidden="false" aria-label="Example delete icon">send
                   </mat-icon>
                 </button>
 
@@ -85,11 +85,11 @@
                 <span>รหัสใบสั่งซื้อ: {{item2.monitorno}}</span>
                 <span class="example-spacer pl-5 d-none d-md-block"><small>ทีม: {{item2.team.teamname}}</small></span>
                 <button mat-icon-button *ngIf="user.roles[0]==='stockstaff'" (click)="printLabelAll(item2)">
-                  <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
+                  <mat-icon aria-hidden="false" aria-label="Example heart icon">print
                   </mat-icon>
                 </button>
                 <button mat-icon-button *ngIf="user.roles[0]==='stockstaff'" (click)="toWaitShipping(item2)">
-                  <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
+                  <mat-icon aria-hidden="false" aria-label="Example delete icon">send
                   </mat-icon>
                 </button>
               </mat-toolbar-row>
@@ -132,12 +132,12 @@
                         </div>
                       </mat-card-content>
                       <mat-card-actions class="text-right" *ngIf="user.roles[0]==='stockstaff'">
+                        <button mat-icon-button color="accent" (click)="addBox(itm2,item2)" *ngIf="i === 0">
+                          <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+                        </button>
                         <button mat-icon-button color="accent">
                           <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(itm2)">print
                           </mat-icon>
-                        </button>
-                        <button mat-icon-button color="accent" (click)="addBox(itm2,item2)">
-                          <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
                         </button>
                         <button mat-icon-button color="accent">
                           <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
@@ -169,7 +169,7 @@
                 <span class="example-spacer pl-5 d-none d-md-block"><small>ทีม: {{item3.team.teamname}}</small></span>
 
                 <button mat-icon-button *ngIf="user.roles[0]==='stockstaff'" (click)="toComplete(item3)">
-                  <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
+                  <mat-icon aria-hidden="false" aria-label="Example delete icon">send
                   </mat-icon>
                 </button>
               </mat-toolbar-row>
