--- a/src/app/pages/search-monitor-all/search-monitor-all.component.html
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.html
@@ -45,7 +45,7 @@
             </button>
           </mat-toolbar-row>
         </mat-toolbar>
-        <div class="row border-bottom">
+        <div class="row border-bottom" *ngIf="item.status === 'waitwithdrawal'">
           <div class="col-12 col-md-6" *ngFor="let itm of item.orders">
             <mat-card class="m-3">
               <mat-card-header>
@@ -71,8 +71,21 @@
                 <p class="ml-3"><small>{{itm.paymenttype.name}}</small></p>
 
               </mat-card-content>
-              <mat-card-content *ngIf="item.status === 'waitpack'">
-                <div class="col-12 col-md-12" *ngFor="let label2 of itm.labels; let i=index">
+            </mat-card>
+          </div>
+        </div>
+        <div class="row border-bottom mt-3"
+          *ngIf="item.status === 'waitpack' || item.status === 'waitshipping' || item.status === 'complete'">
+          <div class="col-12 col-md-12" *ngFor="let itm of item.orders">
+            <span style="display: block" class="ml-3">
+              <span class="ml-3">ออเดอร์: </span>
+              <span class="color-oder">{{itm.orderno}}</span>
+            </span>
+            <div class="col-12 col-md-6" style="display: inline-block;vertical-align: top"
+              *ngFor="let label2 of itm.labels; let i=index">
+              <mat-card class="m-3">
+                <mat-card-content
+                  *ngIf="item.status === 'waitpack' || item.status === 'waitshipping' || item.status === 'complete'">
                   <div class="row">
                     <div class="col-12 text-right">
                       <span>กล่องที่ {{i + 1}}</span>
@@ -101,27 +114,22 @@
                       </div>
                     </div>
                   </div>
-                </div>
-              </mat-card-content>
-              <mat-card-actions class="text-right mb-0" *ngIf="item.status === 'waitpack'">
-                <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
-                  <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(itm)">
-                    print
-                  </mat-icon>
-                </button>
-                <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
-                  <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
-                </button>
-                <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
-                  <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
-                </button>
-              </mat-card-actions>
-              <mat-card-actions class="text-right mb-0" *ngIf="item.status === 'waitshipping'">
-                <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
-                  <mat-icon aria-label="Example icon-button with a heart icon">edit</mat-icon>
-                </button>
-              </mat-card-actions>
-            </mat-card>
+                </mat-card-content>
+                <mat-card-actions class="text-right mb-0" *ngIf="item.status === 'waitpack'">
+                  <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff' && i === 0">
+                    <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+                  </button>
+                  <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
+                    <mat-icon aria-label="Example icon-button with a heart icon" (click)="printLabel(itm)">
+                      print
+                    </mat-icon>
+                  </button>
+                  <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
+                    <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
+                  </button>
+                </mat-card-actions>
+              </mat-card>
+            </div>
           </div>
         </div>
       </div>
